# CPL-Sync

./: README.md
C++/: CMakeLists.txt
C++/CPL-Sync/include/CPLSync/: CPLSync.h  CPLSyncProblem.h  CPLSync_types.h  CPLSync_utils.h  Oblique.h  RelativePoseMeasurement.h
C++/CPL-Sync/src/: CPLSync.cpp  CPLSyncProblem.cpp  CPLSync_utils.cpp  Oblique.cpp
C++/SE-Sync/include/SESync/: SESync.h
C++/SE-Sync/src/: SESync.cpp  SESyncProblem.cpp
C++/examples/: .ycm_extra_conf.py  CMakeLists.txt  cpl_sync.cpp
